force-app/main/default/objects/Borrow_Log__c/Borrow_Log__c.object-meta.xml
<CustomObject>
    <description>A record of book copies lent to contacts, and their due date.</description>
    <label>Borrow Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Borrowed Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrow Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>