force-app/main/default/objects/Borrow_Log__c/fields/Book_Copy__c.field-meta.xml
<CustomField>
    <fullName>Book_Copy__c</fullName>
    <description>Relationship between one physical copy of a book to its borrowed history.</description>
    <label>Book Copy</label>
    <referenceTo>Book_Copy__c</referenceTo>
    <relationshipLabel>Borrow Logs</relationshipLabel>
    <relationshipName>Borrow_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>