force-app/main/default/objects/Borrow_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Relationship between contact and his/her borrow history.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Borrow Logs</relationshipLabel>
    <relationshipName>Borrow_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>