force-app/main/default/objects/Borrow_Log__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date that the borrowed book is due.</description>
    <formula>TODAY() +14</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>